# auto_test_framework

./: .gitignore  Jenkinsfile  README.md  __init__.py  pyproject.toml  pytest.ini
.github/workflows/: daily-test.yml  pr-test.yml
config/: dev_config.py  prod_config.py  qa_config.py  settings.py  staging_config.py
data/: cookies.json  test_data.json  test_data.yaml
data/excel/: api_flow_test_data.xlsx  api_test_data.xlsx
data/sql/: init_data.sql
docker/: Dockerfile
requirements/: base.txt  dev.txt  docker.txt  prod.txt
scripts/: clean_data.py  create_flow_test_data.py  create_test_data.py  init_env.py  run_test.py  test_json_assertion.py
src/api/: __init__.py  base_api.py  user_api.py
src/ui/: base_page.py  contract_list_page.py  create_contract_page.py  login_page.py  send_contract_page.py  sign_contract_page.py
src/utils/: allure_hooks.py  auth_manager.py  context_manager.py  db_client.py  encrypt_util.py  excel_reader.py  flow_test_engine.py  json_assertion.py  json_utils.py  logger.py  param_replacer.py  redis_client.py  response_extractor.py
tests/: conftest.py  test_01.py
tests/api_test/: test_api_flow.py  test_json_assertion.py  test_user_api.py
tests/e2e_test/: test_buy_flow.py
tests/ui_test/: test_contract_list.py  test_create_contract.py  test_login.py  test_send_contract.py  test_sign_contract.py
